<resources>
    <string name="app_name">PetStore</string>
    <string name="title_activity_pet_detail">Pet Detail</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pet_id_label">ID:</string>
    <string name="pet_category_label">Category:</string>
    <string name="pet_tags_label">Tags:</string>
    <string name="pet_status_label">Status:</string>
    <string name="pet_detail_tab">DETAIL</string>
    <string name="custom_tab">ADD PET</string>
    <string name="add_pet_title">ADD NEW PET</string>
    <string name="pet_name_hint">Name</string>
    <string name="pet_id_hint">ID</string>
    <string name="pet_category_hint">Category</string>
    <string name="pet_tags_hint">Tags, comma separated</string>
    <string name="pet_status_hint">Status</string>
    <string name="pet_photo_url_hint">Photo URLs, comma separated</string>
    <string name="send_button">SEND</string>
</resources>
